# localllm-commands

./: .gitignore  README.md  main.py  pyproject.toml
more-commands/glm/: glm-4.5-air.md
more-commands/inclusion-ai/: ling-flash-2.0.md  ring-flash-2.0.md
more-commands/openai/: gpt-oss-120b.md
more-commands/qwen/: qwen3-coder-30b-a3b-instruct.md
more-commands/tencent/: hunyuan-a13b-instruct.md
scripts/: ATS_database_script.py  admin_UI_script.py  base_script.py  error_script.py  keep_alive_script.py  script_for_ATS.py  script_for_admin_UI.py  simple_script.py
src/: __init__.py  classes.py  config.py  custom_exceptions.py  db.py  load_scripts.py  logger.py  models.py
src/templates/: home.html  home.html_  script_log.html
tables/glm/: glm-4.5-air.md
test_scripts/: test_script_1.py  test_script_2.py  test_script_3.py  test_script_4.py  test_script_5.py
tests/: conftest.py  test_api.py  test_db.py  test_factory.py  test_logger.py  test_script.py  test_script_manager.py
tests/duplicate_script_IDs/: test_script_1.py  test_script_2.py
tests/missing_ID_script/: test_missing_ID_script.py
tests/missing_description_script/: test_missing_description_script.py
tests/missing_execute_script/: test_missing_execute_script.py
tests/missing_name_script/: test_missing_name_script.py
tests/test_scripts/: test_script_1.py  test_script_2.py  test_script_3.py
