[project]
name = "localllm-commands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "pdf2image>=1.17.0",
    "playwright>=1.55.0",
    "pytest>=9.0.2",
    "redis[hiredis]>=7.4.0",
    "requests>=2.32.5",
]
